@@ -9,7 +9,7 @@ use Carp;
 use strict;
 use vars qw ($Debug);
 
-our $VERSION = '1.051';
+our $VERSION = '1.052';
 
 #######################################################################
 
@@ -235,7 +235,7 @@ If any does not exist, return undef.
 
 The latest version is available from CPAN and from L<http://www.veripool.org/>.
 
-Copyright 2000-2009 by Wilson Snyder.  This package is free software; you
+Copyright 2000-2010 by Wilson Snyder.  This package is free software; you
 can redistribute it and/or modify it under the terms of either the GNU
 Lesser General Public License Version 3 or the Perl Artistic License
 Version 2.0.
