@@ -12,7 +12,7 @@ use Carp;
 
 use strict;
 
-our $VERSION = '1.051';
+our $VERSION = '1.052';
 
 #######################################################################
 
@@ -224,7 +224,7 @@ Specifies the directory containing the runtime database.  Defaults to
 
 The latest version is available from CPAN and from L<http://www.veripool.org/>.
 
-Copyright 2000-2009 by Wilson Snyder.  This package is free software; you
+Copyright 2000-2010 by Wilson Snyder.  This package is free software; you
 can redistribute it and/or modify it under the terms of either the GNU
 Lesser General Public License Version 3 or the Perl Artistic License
 Version 2.0.
