@@ -25,7 +25,7 @@ This is the Make::Cache Package.
 @node Copyright, Summary, Top, Top
 @section Copyright
 
-This package is Copyright 2003-2009 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
+This package is Copyright 2003-2010 by Wilson Snyder @email{wsnyder@@wsnyder.org}.
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of either the GNU General Public License Version 3
