@@ -2,7 +2,7 @@
 ######################################################################
 # DESCRIPTION: Perl ExtUtils: Type 'make test' to test this package
 #
-# Copyright 2002-2009 by Wilson Snyder.  This program is free software;
+# Copyright 2002-2010 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
 # General Public License Version 3 or the Perl Artistic License Version 2.0.
 ######################################################################
