@@ -1,6 +1,6 @@
 # DESCRIPTION: Perl ExtUtils: Common routines required by package tests
 #
-# Copyright 2000-2009 by Wilson Snyder.  This program is free software;
+# Copyright 2000-2010 by Wilson Snyder.  This program is free software;
 # you can redistribute it and/or modify it under the terms of either the GNU
 # General Public License Version 3 or the Perl Artistic License Version 2.0.
 
