@@ -2,6 +2,10 @@ Revision history for Perl extension Make::Cache
 
 The contributors that suggested a given feature are shown in [].
 
+* Make::Cache 1.052 2010/03/04
+
+****	Fix Pod::Usage dependency, rt51024.  [Andreas Koenig]
+
 * Make::Cache 1.051 2009/05/19
 
 **	This package is now licensed under LGPL v3 and/or Artistic v2.0.
@@ -88,7 +92,7 @@ DESCRIPTION: Documentation on change history for this package
 
 This uses outline mode in Emacs.  See C-h m [M-x describe-mode].
 
-Copyright 2003-2009 by Wilson Snyder.  This program is free software;
+Copyright 2003-2010 by Wilson Snyder.  This program is free software;
 you can redistribute it and/or modify it under the terms of either the GNU
 General Public License Version 3 or the Perl Artistic License Version 2.0.
 
